content/registry/packages/google-native/api-docs/dialogflow/v3/entitytype/_index.md

---
title: "EntityType"
title_tag: "google-native.dialogflow/v3.EntityType"
meta_desc: "Documentation for the google-native.dialogflow/v3.EntityType resource with examples, input properties, output properties, lookup functions, and supporting types."
aliases:
    - "/docs/reference/pkg/google-native/EntityType/"
layout: api-doc-resource
---



<!-- WARNING: this file was generated by Pulumi Docs Generator. -->
<!-- Do not edit by hand unless you're certain you know what you are doing! -->

Creates an entity type in the specified agent. Note: You should always train a flow prior to sending it queries. See the [training documentation](https://cloud.google.com/dialogflow/cx/docs/concept/training).




## Create a EntityType Resource {#create}
{{< chooser language "typescript,python,go,csharp" / >}}


{{% choosable language nodejs %}}
<div class="highlight"><pre class="chroma"><code class="language-typescript" data-lang="typescript"><span class="k">new </span><span class="nx">EntityType</span><span class="p">(</span><span class="nx">name</span><span class="p">:</span> <span class="nx">string</span><span class="p">,</span> <span class="nx">args</span><span class="p">:</span> <span class="nx"><a href="#inputs">EntityTypeArgs</a></span><span class="p">,</span> <span class="nx">opts</span><span class="p">?:</span> <span class="nx"><a href="/docs/reference/pkg/nodejs/pulumi/pulumi/#CustomResourceOptions">CustomResourceOptions</a></span><span class="p">);</span></code></pre></div>
{{% /choosable %}}

{{% choosable language python %}}
<div class="highlight"><pre class="chroma"><code class="language-python" data-lang="python"><span class=nd>@overload</span>
<span class="k">def </span><span class="nx">EntityType</span><span class="p">(</span><span class="nx">resource_name</span><span class="p">:</span> <span class="nx">str</span><span class="p">,</span>
               <span class="nx">opts</span><span class="p">:</span> <span class="nx"><a href="/docs/reference/pkg/python/pulumi/#pulumi.ResourceOptions">Optional[ResourceOptions]</a></span> = None<span class="p">,</span>
               <span class="nx">agent_id</span><span class="p">:</span> <span class="nx">Optional[str]</span> = None<span class="p">,</span>
               <span class="nx">auto_expansion_mode</span><span class="p">:</span> <span class="nx">Optional[EntityTypeAutoExpansionMode]</span> = None<span class="p">,</span>
               <span class="nx">display_name</span><span class="p">:</span> <span class="nx">Optional[str]</span> = None<span class="p">,</span>
               <span class="nx">enable_fuzzy_extraction</span><span class="p">:</span> <span class="nx">Optional[bool]</span> = None<span class="p">,</span>
               <span class="nx">entities</span><span class="p">:</span> <span class="nx">Optional[Sequence[GoogleCloudDialogflowCxV3EntityTypeEntityArgs]]</span> = None<span class="p">,</span>
               <span class="nx">excluded_phrases</span><span class="p">:</span> <span class="nx">Optional[Sequence[GoogleCloudDialogflowCxV3EntityTypeExcludedPhraseArgs]]</span> = None<span class="p">,</span>
               <span class="nx">kind</span><span class="p">:</span> <span class="nx">Optional[EntityTypeKind]</span> = None<span class="p">,</span>
               <span class="nx">language_code</span><span class="p">:</span> <span class="nx">Optional[str]</span> = None<span class="p">,</span>
               <span class="nx">location</span><span class="p">:</span> <span class="nx">Optional[str]</span> = None<span class="p">,</span>
               <span class="nx">name</span><span class="p">:</span> <span class="nx">Optional[str]</span> = None<span class="p">,</span>
               <span class="nx">project</span><span class="p">:</span> <span class="nx">Optional[str]</span> = None<span class="p">,</span>
               <span class="nx">redact</span><span class="p">:</span> <span class="nx">Optional[bool]</span> = None<span class="p">)</span>
<span class=nd>@overload</span>
<span class="k">def </span><span class="nx">EntityType</span><span class="p">(</span><span class="nx">resource_name</span><span class="p">:</span> <span class="nx">str</span><span class="p">,</span>
               <span class="nx">args</span><span class="p">:</span> <span class="nx"><a href="#inputs">EntityTypeArgs</a></span><span class="p">,</span>
               <span class="nx">opts</span><span class="p">:</span> <span class="nx"><a href="/docs/reference/pkg/python/pulumi/#pulumi.ResourceOptions">Optional[ResourceOptions]</a></span> = None<span class="p">)</span></code></pre></div>
{{% /choosable %}}

{{% choosable language go %}}
<div class="highlight"><pre class="chroma"><code class="language-go" data-lang="go"><span class="k">func </span><span class="nx">NewEntityType</span><span class="p">(</span><span class="nx">ctx</span><span class="p"> *</span><span class="nx"><a href="https://pkg.go.dev/github.com/pulumi/pulumi/sdk/v3/go/pulumi?tab=doc#Context">Context</a></span><span class="p">,</span> <span class="nx">name</span><span class="p"> </span><span class="nx">string</span><span class="p">,</span> <span class="nx">args</span><span class="p"> </span><span class="nx"><a href="#inputs">EntityTypeArgs</a></span><span class="p">,</span> <span class="nx">opts</span><span class="p"> ...</span><span class="nx"><a href="https://pkg.go.dev/github.com/pulumi/pulumi/sdk/v3/go/pulumi?tab=doc#ResourceOption">ResourceOption</a></span><span class="p">) (*<span class="nx">EntityType</span>, error)</span></code></pre></div>
{{% /choosable %}}

{{% choosable language csharp %}}
<div class="highlight"><pre class="chroma"><code class="language-csharp" data-lang="csharp"><span class="k">public </span><span class="nx">EntityType</span><span class="p">(</span><span class="nx">string</span><span class="p"> </span><span class="nx">name<span class="p">,</span> <span class="nx"><a href="#inputs">EntityTypeArgs</a></span><span class="p"> </span><span class="nx">args<span class="p">,</span> <span class="nx"><a href="/docs/reference/pkg/dotnet/Pulumi/Pulumi.CustomResourceOptions.html">CustomResourceOptions</a></span><span class="p">? </span><span class="nx">opts = null<span class="p">)</span></code></pre></div>
{{% /choosable %}}

{{% choosable language nodejs %}}

<dl class="resources-properties"><dt
        class="property-required" title="Required">
        <span>name</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>The unique name of the resource.</dd><dt
        class="property-required" title="Required">
        <span>args</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#inputs">EntityTypeArgs</a></span>
    </dt>
    <dd>The arguments to resource properties.</dd><dt
        class="property-optional" title="Optional">
        <span>opts</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="/docs/reference/pkg/nodejs/pulumi/pulumi/#CustomResourceOptions">CustomResourceOptions</a></span>
    </dt>
    <dd>Bag of options to control resource&#39;s behavior.</dd></dl>

{{% /choosable %}}

{{% choosable language python %}}

<dl class="resources-properties"><dt
        class="property-required" title="Required">
        <span>resource_name</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>The unique name of the resource.</dd><dt
        class="property-required" title="Required">
        <span>args</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#inputs">EntityTypeArgs</a></span>
    </dt>
    <dd>The arguments to resource properties.</dd><dt
        class="property-optional" title="Optional">
        <span>opts</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="/docs/reference/pkg/python/pulumi/#pulumi.ResourceOptions">ResourceOptions</a></span>
    </dt>
    <dd>Bag of options to control resource&#39;s behavior.</dd></dl>

{{% /choosable %}}

{{% choosable language go %}}

<dl class="resources-properties"><dt
        class="property-optional" title="Optional">
        <span>ctx</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="https://pkg.go.dev/github.com/pulumi/pulumi/sdk/v3/go/pulumi?tab=doc#Context">Context</a></span>
    </dt>
    <dd>Context object for the current deployment.</dd><dt
        class="property-required" title="Required">
        <span>name</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>The unique name of the resource.</dd><dt
        class="property-required" title="Required">
        <span>args</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#inputs">EntityTypeArgs</a></span>
    </dt>
    <dd>The arguments to resource properties.</dd><dt
        class="property-optional" title="Optional">
        <span>opts</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="https://pkg.go.dev/github.com/pulumi/pulumi/sdk/v3/go/pulumi?tab=doc#ResourceOption">ResourceOption</a></span>
    </dt>
    <dd>Bag of options to control resource&#39;s behavior.</dd></dl>

{{% /choosable %}}

{{% choosable language csharp %}}

<dl class="resources-properties"><dt
        class="property-required" title="Required">
        <span>name</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>The unique name of the resource.</dd><dt
        class="property-required" title="Required">
        <span>args</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#inputs">EntityTypeArgs</a></span>
    </dt>
    <dd>The arguments to resource properties.</dd><dt
        class="property-optional" title="Optional">
        <span>opts</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="/docs/reference/pkg/dotnet/Pulumi/Pulumi.CustomResourceOptions.html">CustomResourceOptions</a></span>
    </dt>
    <dd>Bag of options to control resource&#39;s behavior.</dd></dl>

{{% /choosable %}}

## EntityType Resource Properties {#properties}

To learn more about resource properties and how to use them, see [Inputs and Outputs]({{< relref "/docs/intro/concepts/inputs-outputs" >}}) in the Architecture and Concepts docs.

### Inputs

The EntityType resource accepts the following [input]({{< relref "/docs/intro/concepts/inputs-outputs" >}}) properties:



{{% choosable language csharp %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="agentid_csharp">
<a href="#agentid_csharp" style="color: inherit; text-decoration: inherit;">Agent<wbr>Id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="displayname_csharp">
<a href="#displayname_csharp" style="color: inherit; text-decoration: inherit;">Display<wbr>Name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The human-readable name of the entity type, unique within the agent.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="kind_csharp">
<a href="#kind_csharp" style="color: inherit; text-decoration: inherit;">Kind</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#entitytypekind">Pulumi.<wbr>Google<wbr>Native.<wbr>Dialogflow.<wbr>V3.<wbr>Entity<wbr>Type<wbr>Kind</a></span>
    </dt>
    <dd>{{% md %}}Indicates the kind of entity type.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="autoexpansionmode_csharp">
<a href="#autoexpansionmode_csharp" style="color: inherit; text-decoration: inherit;">Auto<wbr>Expansion<wbr>Mode</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#entitytypeautoexpansionmode">Pulumi.<wbr>Google<wbr>Native.<wbr>Dialogflow.<wbr>V3.<wbr>Entity<wbr>Type<wbr>Auto<wbr>Expansion<wbr>Mode</a></span>
    </dt>
    <dd>{{% md %}}Indicates whether the entity type can be automatically expanded.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="enablefuzzyextraction_csharp">
<a href="#enablefuzzyextraction_csharp" style="color: inherit; text-decoration: inherit;">Enable<wbr>Fuzzy<wbr>Extraction</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">bool</span>
    </dt>
    <dd>{{% md %}}Enables fuzzy entity extraction during classification.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="entities_csharp">
<a href="#entities_csharp" style="color: inherit; text-decoration: inherit;">Entities</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeentity">List&lt;Pulumi.<wbr>Google<wbr>Native.<wbr>Dialogflow.<wbr>V3.<wbr>Inputs.<wbr>Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Entity<wbr>Args&gt;</a></span>
    </dt>
    <dd>{{% md %}}The collection of entity entries associated with the entity type.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="excludedphrases_csharp">
<a href="#excludedphrases_csharp" style="color: inherit; text-decoration: inherit;">Excluded<wbr>Phrases</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeexcludedphrase">List&lt;Pulumi.<wbr>Google<wbr>Native.<wbr>Dialogflow.<wbr>V3.<wbr>Inputs.<wbr>Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Excluded<wbr>Phrase<wbr>Args&gt;</a></span>
    </dt>
    <dd>{{% md %}}Collection of exceptional words and phrases that shouldn't be matched. For example, if you have a size entity type with entry `giant`(an adjective), you might consider adding `giants`(a noun) as an exclusion. If the kind of entity type is `KIND_MAP`, then the phrases specified by entities and excluded phrases should be mutually exclusive.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="languagecode_csharp">
<a href="#languagecode_csharp" style="color: inherit; text-decoration: inherit;">Language<wbr>Code</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="location_csharp">
<a href="#location_csharp" style="color: inherit; text-decoration: inherit;">Location</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="name_csharp">
<a href="#name_csharp" style="color: inherit; text-decoration: inherit;">Name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The unique identifier of the entity type. Required for EntityTypes.UpdateEntityType. Format: `projects//locations//agents//entityTypes/`.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="project_csharp">
<a href="#project_csharp" style="color: inherit; text-decoration: inherit;">Project</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="redact_csharp">
<a href="#redact_csharp" style="color: inherit; text-decoration: inherit;">Redact</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">bool</span>
    </dt>
    <dd>{{% md %}}Indicates whether parameters of the entity type should be redacted in log. If redaction is enabled, page parameters and intent parameters referring to the entity type will be replaced by parameter name when logging.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language go %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="agentid_go">
<a href="#agentid_go" style="color: inherit; text-decoration: inherit;">Agent<wbr>Id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="displayname_go">
<a href="#displayname_go" style="color: inherit; text-decoration: inherit;">Display<wbr>Name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The human-readable name of the entity type, unique within the agent.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="kind_go">
<a href="#kind_go" style="color: inherit; text-decoration: inherit;">Kind</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#entitytypekind">Entity<wbr>Type<wbr>Kind</a></span>
    </dt>
    <dd>{{% md %}}Indicates the kind of entity type.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="autoexpansionmode_go">
<a href="#autoexpansionmode_go" style="color: inherit; text-decoration: inherit;">Auto<wbr>Expansion<wbr>Mode</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#entitytypeautoexpansionmode">Entity<wbr>Type<wbr>Auto<wbr>Expansion<wbr>Mode</a></span>
    </dt>
    <dd>{{% md %}}Indicates whether the entity type can be automatically expanded.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="enablefuzzyextraction_go">
<a href="#enablefuzzyextraction_go" style="color: inherit; text-decoration: inherit;">Enable<wbr>Fuzzy<wbr>Extraction</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">bool</span>
    </dt>
    <dd>{{% md %}}Enables fuzzy entity extraction during classification.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="entities_go">
<a href="#entities_go" style="color: inherit; text-decoration: inherit;">Entities</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeentity">[]Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Entity<wbr>Args</a></span>
    </dt>
    <dd>{{% md %}}The collection of entity entries associated with the entity type.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="excludedphrases_go">
<a href="#excludedphrases_go" style="color: inherit; text-decoration: inherit;">Excluded<wbr>Phrases</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeexcludedphrase">[]Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Excluded<wbr>Phrase<wbr>Args</a></span>
    </dt>
    <dd>{{% md %}}Collection of exceptional words and phrases that shouldn't be matched. For example, if you have a size entity type with entry `giant`(an adjective), you might consider adding `giants`(a noun) as an exclusion. If the kind of entity type is `KIND_MAP`, then the phrases specified by entities and excluded phrases should be mutually exclusive.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="languagecode_go">
<a href="#languagecode_go" style="color: inherit; text-decoration: inherit;">Language<wbr>Code</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="location_go">
<a href="#location_go" style="color: inherit; text-decoration: inherit;">Location</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="name_go">
<a href="#name_go" style="color: inherit; text-decoration: inherit;">Name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The unique identifier of the entity type. Required for EntityTypes.UpdateEntityType. Format: `projects//locations//agents//entityTypes/`.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="project_go">
<a href="#project_go" style="color: inherit; text-decoration: inherit;">Project</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="redact_go">
<a href="#redact_go" style="color: inherit; text-decoration: inherit;">Redact</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">bool</span>
    </dt>
    <dd>{{% md %}}Indicates whether parameters of the entity type should be redacted in log. If redaction is enabled, page parameters and intent parameters referring to the entity type will be replaced by parameter name when logging.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language nodejs %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="agentid_nodejs">
<a href="#agentid_nodejs" style="color: inherit; text-decoration: inherit;">agent<wbr>Id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="displayname_nodejs">
<a href="#displayname_nodejs" style="color: inherit; text-decoration: inherit;">display<wbr>Name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The human-readable name of the entity type, unique within the agent.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="kind_nodejs">
<a href="#kind_nodejs" style="color: inherit; text-decoration: inherit;">kind</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#entitytypekind">Entity<wbr>Type<wbr>Kind</a></span>
    </dt>
    <dd>{{% md %}}Indicates the kind of entity type.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="autoexpansionmode_nodejs">
<a href="#autoexpansionmode_nodejs" style="color: inherit; text-decoration: inherit;">auto<wbr>Expansion<wbr>Mode</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#entitytypeautoexpansionmode">Entity<wbr>Type<wbr>Auto<wbr>Expansion<wbr>Mode</a></span>
    </dt>
    <dd>{{% md %}}Indicates whether the entity type can be automatically expanded.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="enablefuzzyextraction_nodejs">
<a href="#enablefuzzyextraction_nodejs" style="color: inherit; text-decoration: inherit;">enable<wbr>Fuzzy<wbr>Extraction</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">boolean</span>
    </dt>
    <dd>{{% md %}}Enables fuzzy entity extraction during classification.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="entities_nodejs">
<a href="#entities_nodejs" style="color: inherit; text-decoration: inherit;">entities</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeentity">Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Entity<wbr>Args[]</a></span>
    </dt>
    <dd>{{% md %}}The collection of entity entries associated with the entity type.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="excludedphrases_nodejs">
<a href="#excludedphrases_nodejs" style="color: inherit; text-decoration: inherit;">excluded<wbr>Phrases</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeexcludedphrase">Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Excluded<wbr>Phrase<wbr>Args[]</a></span>
    </dt>
    <dd>{{% md %}}Collection of exceptional words and phrases that shouldn't be matched. For example, if you have a size entity type with entry `giant`(an adjective), you might consider adding `giants`(a noun) as an exclusion. If the kind of entity type is `KIND_MAP`, then the phrases specified by entities and excluded phrases should be mutually exclusive.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="languagecode_nodejs">
<a href="#languagecode_nodejs" style="color: inherit; text-decoration: inherit;">language<wbr>Code</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="location_nodejs">
<a href="#location_nodejs" style="color: inherit; text-decoration: inherit;">location</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="name_nodejs">
<a href="#name_nodejs" style="color: inherit; text-decoration: inherit;">name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The unique identifier of the entity type. Required for EntityTypes.UpdateEntityType. Format: `projects//locations//agents//entityTypes/`.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="project_nodejs">
<a href="#project_nodejs" style="color: inherit; text-decoration: inherit;">project</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="redact_nodejs">
<a href="#redact_nodejs" style="color: inherit; text-decoration: inherit;">redact</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">boolean</span>
    </dt>
    <dd>{{% md %}}Indicates whether parameters of the entity type should be redacted in log. If redaction is enabled, page parameters and intent parameters referring to the entity type will be replaced by parameter name when logging.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language python %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="agent_id_python">
<a href="#agent_id_python" style="color: inherit; text-decoration: inherit;">agent_<wbr>id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="display_name_python">
<a href="#display_name_python" style="color: inherit; text-decoration: inherit;">display_<wbr>name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}The human-readable name of the entity type, unique within the agent.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="kind_python">
<a href="#kind_python" style="color: inherit; text-decoration: inherit;">kind</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#entitytypekind">Entity<wbr>Type<wbr>Kind</a></span>
    </dt>
    <dd>{{% md %}}Indicates the kind of entity type.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="auto_expansion_mode_python">
<a href="#auto_expansion_mode_python" style="color: inherit; text-decoration: inherit;">auto_<wbr>expansion_<wbr>mode</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#entitytypeautoexpansionmode">Entity<wbr>Type<wbr>Auto<wbr>Expansion<wbr>Mode</a></span>
    </dt>
    <dd>{{% md %}}Indicates whether the entity type can be automatically expanded.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="enable_fuzzy_extraction_python">
<a href="#enable_fuzzy_extraction_python" style="color: inherit; text-decoration: inherit;">enable_<wbr>fuzzy_<wbr>extraction</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">bool</span>
    </dt>
    <dd>{{% md %}}Enables fuzzy entity extraction during classification.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="entities_python">
<a href="#entities_python" style="color: inherit; text-decoration: inherit;">entities</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeentity">Sequence[Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Entity<wbr>Args]</a></span>
    </dt>
    <dd>{{% md %}}The collection of entity entries associated with the entity type.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="excluded_phrases_python">
<a href="#excluded_phrases_python" style="color: inherit; text-decoration: inherit;">excluded_<wbr>phrases</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeexcludedphrase">Sequence[Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Excluded<wbr>Phrase<wbr>Args]</a></span>
    </dt>
    <dd>{{% md %}}Collection of exceptional words and phrases that shouldn't be matched. For example, if you have a size entity type with entry `giant`(an adjective), you might consider adding `giants`(a noun) as an exclusion. If the kind of entity type is `KIND_MAP`, then the phrases specified by entities and excluded phrases should be mutually exclusive.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="language_code_python">
<a href="#language_code_python" style="color: inherit; text-decoration: inherit;">language_<wbr>code</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="location_python">
<a href="#location_python" style="color: inherit; text-decoration: inherit;">location</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="name_python">
<a href="#name_python" style="color: inherit; text-decoration: inherit;">name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}The unique identifier of the entity type. Required for EntityTypes.UpdateEntityType. Format: `projects//locations//agents//entityTypes/`.{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="project_python">
<a href="#project_python" style="color: inherit; text-decoration: inherit;">project</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="redact_python">
<a href="#redact_python" style="color: inherit; text-decoration: inherit;">redact</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">bool</span>
    </dt>
    <dd>{{% md %}}Indicates whether parameters of the entity type should be redacted in log. If redaction is enabled, page parameters and intent parameters referring to the entity type will be replaced by parameter name when logging.{{% /md %}}</dd></dl>
{{% /choosable %}}


### Outputs

All [input](#inputs) properties are implicitly available as output properties. Additionally, the EntityType resource produces the following output properties:



{{% choosable language csharp %}}
<dl class="resources-properties"><dt class="property-"
            title="">
        <span id="id_csharp">
<a href="#id_csharp" style="color: inherit; text-decoration: inherit;">Id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The provider-assigned unique ID for this managed resource.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language go %}}
<dl class="resources-properties"><dt class="property-"
            title="">
        <span id="id_go">
<a href="#id_go" style="color: inherit; text-decoration: inherit;">Id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The provider-assigned unique ID for this managed resource.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language nodejs %}}
<dl class="resources-properties"><dt class="property-"
            title="">
        <span id="id_nodejs">
<a href="#id_nodejs" style="color: inherit; text-decoration: inherit;">id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The provider-assigned unique ID for this managed resource.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language python %}}
<dl class="resources-properties"><dt class="property-"
            title="">
        <span id="id_python">
<a href="#id_python" style="color: inherit; text-decoration: inherit;">id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}The provider-assigned unique ID for this managed resource.{{% /md %}}</dd></dl>
{{% /choosable %}}







## Supporting Types



<h4 id="entitytypeautoexpansionmode">Entity<wbr>Type<wbr>Auto<wbr>Expansion<wbr>Mode</h4>

{{% choosable language csharp %}}
<dl class="tabular"><dt>Auto<wbr>Expansion<wbr>Mode<wbr>Unspecified</dt>
    <dd>AUTO_EXPANSION_MODE_UNSPECIFIED{{% md %}}Auto expansion disabled for the entity.{{% /md %}}</dd><dt>Auto<wbr>Expansion<wbr>Mode<wbr>Default</dt>
    <dd>AUTO_EXPANSION_MODE_DEFAULT{{% md %}}Allows an agent to recognize values that have not been explicitly listed in the entity.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language go %}}
<dl class="tabular"><dt>Entity<wbr>Type<wbr>Auto<wbr>Expansion<wbr>Mode<wbr>Auto<wbr>Expansion<wbr>Mode<wbr>Unspecified</dt>
    <dd>AUTO_EXPANSION_MODE_UNSPECIFIED{{% md %}}Auto expansion disabled for the entity.{{% /md %}}</dd><dt>Entity<wbr>Type<wbr>Auto<wbr>Expansion<wbr>Mode<wbr>Auto<wbr>Expansion<wbr>Mode<wbr>Default</dt>
    <dd>AUTO_EXPANSION_MODE_DEFAULT{{% md %}}Allows an agent to recognize values that have not been explicitly listed in the entity.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language nodejs %}}
<dl class="tabular"><dt>Auto<wbr>Expansion<wbr>Mode<wbr>Unspecified</dt>
    <dd>AUTO_EXPANSION_MODE_UNSPECIFIED{{% md %}}Auto expansion disabled for the entity.{{% /md %}}</dd><dt>Auto<wbr>Expansion<wbr>Mode<wbr>Default</dt>
    <dd>AUTO_EXPANSION_MODE_DEFAULT{{% md %}}Allows an agent to recognize values that have not been explicitly listed in the entity.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language python %}}
<dl class="tabular"><dt>AUTO_EXPANSION_MODE_UNSPECIFIED</dt>
    <dd>AUTO_EXPANSION_MODE_UNSPECIFIED{{% md %}}Auto expansion disabled for the entity.{{% /md %}}</dd><dt>AUTO_EXPANSION_MODE_DEFAULT</dt>
    <dd>AUTO_EXPANSION_MODE_DEFAULT{{% md %}}Allows an agent to recognize values that have not been explicitly listed in the entity.{{% /md %}}</dd></dl>
{{% /choosable %}}

<h4 id="entitytypekind">Entity<wbr>Type<wbr>Kind</h4>

{{% choosable language csharp %}}
<dl class="tabular"><dt>Kind<wbr>Unspecified</dt>
    <dd>KIND_UNSPECIFIED{{% md %}}Not specified. This value should be never used.{{% /md %}}</dd><dt>Kind<wbr>Map</dt>
    <dd>KIND_MAP{{% md %}}Map entity types allow mapping of a group of synonyms to a canonical value.{{% /md %}}</dd><dt>Kind<wbr>List</dt>
    <dd>KIND_LIST{{% md %}}List entity types contain a set of entries that do not map to canonical values. However, list entity types can contain references to other entity types (with or without aliases).{{% /md %}}</dd><dt>Kind<wbr>Regexp</dt>
    <dd>KIND_REGEXP{{% md %}}Regexp entity types allow to specify regular expressions in entries values.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language go %}}
<dl class="tabular"><dt>Entity<wbr>Type<wbr>Kind<wbr>Kind<wbr>Unspecified</dt>
    <dd>KIND_UNSPECIFIED{{% md %}}Not specified. This value should be never used.{{% /md %}}</dd><dt>Entity<wbr>Type<wbr>Kind<wbr>Kind<wbr>Map</dt>
    <dd>KIND_MAP{{% md %}}Map entity types allow mapping of a group of synonyms to a canonical value.{{% /md %}}</dd><dt>Entity<wbr>Type<wbr>Kind<wbr>Kind<wbr>List</dt>
    <dd>KIND_LIST{{% md %}}List entity types contain a set of entries that do not map to canonical values. However, list entity types can contain references to other entity types (with or without aliases).{{% /md %}}</dd><dt>Entity<wbr>Type<wbr>Kind<wbr>Kind<wbr>Regexp</dt>
    <dd>KIND_REGEXP{{% md %}}Regexp entity types allow to specify regular expressions in entries values.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language nodejs %}}
<dl class="tabular"><dt>Kind<wbr>Unspecified</dt>
    <dd>KIND_UNSPECIFIED{{% md %}}Not specified. This value should be never used.{{% /md %}}</dd><dt>Kind<wbr>Map</dt>
    <dd>KIND_MAP{{% md %}}Map entity types allow mapping of a group of synonyms to a canonical value.{{% /md %}}</dd><dt>Kind<wbr>List</dt>
    <dd>KIND_LIST{{% md %}}List entity types contain a set of entries that do not map to canonical values. However, list entity types can contain references to other entity types (with or without aliases).{{% /md %}}</dd><dt>Kind<wbr>Regexp</dt>
    <dd>KIND_REGEXP{{% md %}}Regexp entity types allow to specify regular expressions in entries values.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language python %}}
<dl class="tabular"><dt>KIND_UNSPECIFIED</dt>
    <dd>KIND_UNSPECIFIED{{% md %}}Not specified. This value should be never used.{{% /md %}}</dd><dt>KIND_MAP</dt>
    <dd>KIND_MAP{{% md %}}Map entity types allow mapping of a group of synonyms to a canonical value.{{% /md %}}</dd><dt>KIND_LIST</dt>
    <dd>KIND_LIST{{% md %}}List entity types contain a set of entries that do not map to canonical values. However, list entity types can contain references to other entity types (with or without aliases).{{% /md %}}</dd><dt>KIND_REGEXP</dt>
    <dd>KIND_REGEXP{{% md %}}Regexp entity types allow to specify regular expressions in entries values.{{% /md %}}</dd></dl>
{{% /choosable %}}

<h4 id="googleclouddialogflowcxv3entitytypeentity">Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Entity</h4>

{{% choosable language csharp %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="synonyms_csharp">
<a href="#synonyms_csharp" style="color: inherit; text-decoration: inherit;">Synonyms</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">List&lt;string&gt;</span>
    </dt>
    <dd>{{% md %}}A collection of value synonyms. For example, if the entity type is *vegetable*, and `value` is *scallions*, a synonym could be *green onions*. For `KIND_LIST` entity types: * This collection must contain exactly one synonym equal to `value`.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="value_csharp">
<a href="#value_csharp" style="color: inherit; text-decoration: inherit;">Value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The primary value associated with this entity entry. For example, if the entity type is *vegetable*, the value could be *scallions*. For `KIND_MAP` entity types: * A canonical value to be used in place of synonyms. For `KIND_LIST` entity types: * A string that can contain references to other entity types (with or without aliases).{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language go %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="synonyms_go">
<a href="#synonyms_go" style="color: inherit; text-decoration: inherit;">Synonyms</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">[]string</span>
    </dt>
    <dd>{{% md %}}A collection of value synonyms. For example, if the entity type is *vegetable*, and `value` is *scallions*, a synonym could be *green onions*. For `KIND_LIST` entity types: * This collection must contain exactly one synonym equal to `value`.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="value_go">
<a href="#value_go" style="color: inherit; text-decoration: inherit;">Value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The primary value associated with this entity entry. For example, if the entity type is *vegetable*, the value could be *scallions*. For `KIND_MAP` entity types: * A canonical value to be used in place of synonyms. For `KIND_LIST` entity types: * A string that can contain references to other entity types (with or without aliases).{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language nodejs %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="synonyms_nodejs">
<a href="#synonyms_nodejs" style="color: inherit; text-decoration: inherit;">synonyms</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string[]</span>
    </dt>
    <dd>{{% md %}}A collection of value synonyms. For example, if the entity type is *vegetable*, and `value` is *scallions*, a synonym could be *green onions*. For `KIND_LIST` entity types: * This collection must contain exactly one synonym equal to `value`.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="value_nodejs">
<a href="#value_nodejs" style="color: inherit; text-decoration: inherit;">value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The primary value associated with this entity entry. For example, if the entity type is *vegetable*, the value could be *scallions*. For `KIND_MAP` entity types: * A canonical value to be used in place of synonyms. For `KIND_LIST` entity types: * A string that can contain references to other entity types (with or without aliases).{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language python %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="synonyms_python">
<a href="#synonyms_python" style="color: inherit; text-decoration: inherit;">synonyms</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">Sequence[str]</span>
    </dt>
    <dd>{{% md %}}A collection of value synonyms. For example, if the entity type is *vegetable*, and `value` is *scallions*, a synonym could be *green onions*. For `KIND_LIST` entity types: * This collection must contain exactly one synonym equal to `value`.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="value_python">
<a href="#value_python" style="color: inherit; text-decoration: inherit;">value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}The primary value associated with this entity entry. For example, if the entity type is *vegetable*, the value could be *scallions*. For `KIND_MAP` entity types: * A canonical value to be used in place of synonyms. For `KIND_LIST` entity types: * A string that can contain references to other entity types (with or without aliases).{{% /md %}}</dd></dl>
{{% /choosable %}}

<h4 id="googleclouddialogflowcxv3entitytypeentityresponse">Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Entity<wbr>Response</h4>

{{% choosable language csharp %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="synonyms_csharp">
<a href="#synonyms_csharp" style="color: inherit; text-decoration: inherit;">Synonyms</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">List&lt;string&gt;</span>
    </dt>
    <dd>{{% md %}}A collection of value synonyms. For example, if the entity type is *vegetable*, and `value` is *scallions*, a synonym could be *green onions*. For `KIND_LIST` entity types: * This collection must contain exactly one synonym equal to `value`.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="value_csharp">
<a href="#value_csharp" style="color: inherit; text-decoration: inherit;">Value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The primary value associated with this entity entry. For example, if the entity type is *vegetable*, the value could be *scallions*. For `KIND_MAP` entity types: * A canonical value to be used in place of synonyms. For `KIND_LIST` entity types: * A string that can contain references to other entity types (with or without aliases).{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language go %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="synonyms_go">
<a href="#synonyms_go" style="color: inherit; text-decoration: inherit;">Synonyms</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">[]string</span>
    </dt>
    <dd>{{% md %}}A collection of value synonyms. For example, if the entity type is *vegetable*, and `value` is *scallions*, a synonym could be *green onions*. For `KIND_LIST` entity types: * This collection must contain exactly one synonym equal to `value`.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="value_go">
<a href="#value_go" style="color: inherit; text-decoration: inherit;">Value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The primary value associated with this entity entry. For example, if the entity type is *vegetable*, the value could be *scallions*. For `KIND_MAP` entity types: * A canonical value to be used in place of synonyms. For `KIND_LIST` entity types: * A string that can contain references to other entity types (with or without aliases).{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language nodejs %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="synonyms_nodejs">
<a href="#synonyms_nodejs" style="color: inherit; text-decoration: inherit;">synonyms</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string[]</span>
    </dt>
    <dd>{{% md %}}A collection of value synonyms. For example, if the entity type is *vegetable*, and `value` is *scallions*, a synonym could be *green onions*. For `KIND_LIST` entity types: * This collection must contain exactly one synonym equal to `value`.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="value_nodejs">
<a href="#value_nodejs" style="color: inherit; text-decoration: inherit;">value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The primary value associated with this entity entry. For example, if the entity type is *vegetable*, the value could be *scallions*. For `KIND_MAP` entity types: * A canonical value to be used in place of synonyms. For `KIND_LIST` entity types: * A string that can contain references to other entity types (with or without aliases).{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language python %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="synonyms_python">
<a href="#synonyms_python" style="color: inherit; text-decoration: inherit;">synonyms</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">Sequence[str]</span>
    </dt>
    <dd>{{% md %}}A collection of value synonyms. For example, if the entity type is *vegetable*, and `value` is *scallions*, a synonym could be *green onions*. For `KIND_LIST` entity types: * This collection must contain exactly one synonym equal to `value`.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="value_python">
<a href="#value_python" style="color: inherit; text-decoration: inherit;">value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}The primary value associated with this entity entry. For example, if the entity type is *vegetable*, the value could be *scallions*. For `KIND_MAP` entity types: * A canonical value to be used in place of synonyms. For `KIND_LIST` entity types: * A string that can contain references to other entity types (with or without aliases).{{% /md %}}</dd></dl>
{{% /choosable %}}

<h4 id="googleclouddialogflowcxv3entitytypeexcludedphrase">Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Excluded<wbr>Phrase</h4>

{{% choosable language csharp %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="value_csharp">
<a href="#value_csharp" style="color: inherit; text-decoration: inherit;">Value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The word or phrase to be excluded.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language go %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="value_go">
<a href="#value_go" style="color: inherit; text-decoration: inherit;">Value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The word or phrase to be excluded.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language nodejs %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="value_nodejs">
<a href="#value_nodejs" style="color: inherit; text-decoration: inherit;">value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The word or phrase to be excluded.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language python %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="value_python">
<a href="#value_python" style="color: inherit; text-decoration: inherit;">value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}The word or phrase to be excluded.{{% /md %}}</dd></dl>
{{% /choosable %}}

<h4 id="googleclouddialogflowcxv3entitytypeexcludedphraseresponse">Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Excluded<wbr>Phrase<wbr>Response</h4>

{{% choosable language csharp %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="value_csharp">
<a href="#value_csharp" style="color: inherit; text-decoration: inherit;">Value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The word or phrase to be excluded.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language go %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="value_go">
<a href="#value_go" style="color: inherit; text-decoration: inherit;">Value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The word or phrase to be excluded.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language nodejs %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="value_nodejs">
<a href="#value_nodejs" style="color: inherit; text-decoration: inherit;">value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The word or phrase to be excluded.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language python %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="value_python">
<a href="#value_python" style="color: inherit; text-decoration: inherit;">value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}The word or phrase to be excluded.{{% /md %}}</dd></dl>
{{% /choosable %}}


<h2 id="package-details">Package Details</h2>
<dl class="package-details">
	<dt>Repository</dt>
	<dd><a href="https://github.com/pulumi/pulumi-google-native">https://github.com/pulumi/pulumi-google-native</a></dd>
	<dt>License</dt>
	<dd>Apache-2.0</dd>
</dl>

